--- a/index.html
+++ b/index.html
@@ -2,33 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Basic Document Flow</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Website</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section>
-            <h2>About Us</h2>
-            <p>This is some text about us.</p>
-        </section>
-        <section>
-            <h2>Our Services</h2>
-            <p>Details about our services.</p>
-        </section>
-    </main>
-    <footer>
-        <p>© 2024 My Website</p>
-    </footer>
+    <h1>Basic document flow</h1>
+    <div class="block-level">
+        I am a basic block level element. My adjacent block level elements sit on new lines below me.
+    </div>
+    <div class="block-level">
+        By default we span 100% of the width of our parent element, and we are as tall as our child content. Our total width and height is our content + padding + border width/height.
+    </div>
+    <div class="block-level">
+        We are separated by our margins. Because of margin collapsing, we are separated by the width of one of our margins, not both.
+    </div>
+    <div class="block-level">
+        Inline elements <span class="inline-element">like this one</span> and <span class="inline-element">this one</span> sit on the same line along with adjacent text nodes, if there is space on the same line. Overflowing inline elements will <span class="inline-element">wrap onto a new line if possible (like this one containing text)</span>, or just go on to a new line if not, much like this image will do:
+        <img src="https://github.com/ait-tr/task_fe-css-box-model/raw/main/example.png" alt="Sample Image">
+    </div>
 </body>
 </html>
