--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="block-level">
         Inline elements <span class="inline-element">like this one</span> and <span class="inline-element">this one</span> sit on the same line along with adjacent text nodes, if there is space on the same line. Overflowing inline elements will <span class="inline-element">wrap onto a new line if possible (like this one containing text)</span>, or just go on to a new line if not, much like this image will do:
-        <img src="https://github.com/ait-tr/task_fe-css-box-model/raw/main/example.png" alt="example image">
+        <img src="https://github.com/ait-tr/task_fe-css-box-model/raw/main/example.png" alt="Sample Image">
     </div>
 </body>
 </html>
